Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.54
	* Compiles without GdkPixbuf again
	* GtkIMHtml will refresh when you set a new GTK+ theme
	
version 0.53 (02/28/2002):
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Slovak translation added (Thanks Daniel Rezny)
	* Minor bug fixes re: queued away messages
	* Better buddy icon transparency (for real this time ;-))
	* Ability to change formatting of Oscar screen name
	* Better selection in HTML widget (Thanks BMiller)
	* New icons for ICQ (Thanks Kevin Miller)
	* Editable buddy pounces (Thanks Jason Willis)
	* Server side buddy lists in Oscar (Thanks KingAnt :-))
	* Fix for the chatlist plugin
	* Typing Notification (AIM Direct Connect, Yahoo, MSN)
	* IM Images (Receive Only)
	* Prettier GtkImHtml selection

version 0.52 (02/17/2002):
	* Better buddy icon transparency (thanks SeanEgan)
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Fixed a little bug with connecting via proxy (thanks
	  for reminding me of this, Manish Singh)
	* Updated Simplified Chinese Translation (Thanks Rocky S. Lee)
	* Updated German Translation (Thanks Karsten Weiss)
	* Yahoo! Messenger works again
	* MSN Works again
	* Can register a new user with a Jabber Server (JSeymour)
	* Can now set Jabber vCards (JSeymour)
	* Jabber vCards are now shown in their entirety (JSeymour)
	* Various jabber bug fixes/enhancements (JSeymour)

version 0.51 (01/24/2002):
	* Arrow buttons in log viewer and some other dialogs
	  work (thanks Ben Miller)
	* Option to only send auto-response while idle (thanks
	  Sean Egan)
	* Control time between sending auto-responses (thanks
	  Mark Doliner)
	* Should be able to sign on to Oscar using Mac OS X
	  (thanks Fingolfin, Vincas Ciziunas, et al.)
	* Finnish translation added (Thanks Tero Kuusela)
	* Updated French Translation (Thanks sebfrance)

version 0.50 (12/14/2001):
	* Updated polish translation (Thanks Przemyslaw Sulek)
	* Able to import GnomeICU contact lists